# FumboEngine

./: CMakeLists.txt  LICENSE  README.md  fumbo.cpp  fumbo.hpp  fumbo.rc  fumbo_icon.h  igamestate.hpp
examples/platformer/: CMakeLists.txt  example_platformer.cpp  example_platformer.hpp  main.cpp
examples/topdown/: CMakeLists.txt  example_topdown.cpp  example_topdown.hpp  main.cpp
fumbo/: pfd_wrapper.cpp  pfd_wrapper.hpp  physics.hpp  video.hpp
fumbo/2d/: collision.cpp  collision.hpp  graphics.cpp  graphics.hpp  object.cpp  object.hpp  physics.cpp  physics.hpp
fumbo/audio/: audiomanager.cpp  audiomanager.hpp
fumbo/shader/: shader.cpp  shadermanager.cpp  shadermanager.hpp
fumbo/template/: character_controller.cpp  character_controller.hpp  platformer.hpp  topdown.hpp
fumbo/template/platformer/: platformer_controller.cpp  platformer_controller.hpp
fumbo/template/topdown/: topdown_controller.cpp  topdown_controller.hpp
fumbo/ui/: button.cpp  button.hpp  slider.cpp  slider.hpp  textbox.cpp  visualn.cpp  visualn.hpp
fumbo/utils/: assetpack.cpp  assetpack.hpp  assets.cpp  assets.hpp  fades.cpp  fades.hpp  log.cpp  utils.cpp  utils.hpp
fumbo/video/: videoplayer.cpp  videoplayer.hpp
lib/raymob/: gradle.properties
lib/raymob/app/: build.gradle
lib/raymob/app/src/main/cpp/: CMakeLists.txt  android_main.cpp
template/: character_controller.cpp  character_controller.hpp  platformer.hpp  topdown.hpp
template/platformer/: platformer_controller.cpp  platformer_controller.hpp
template/topdown/: topdown_controller.hpp
tools/: crypto.hpp  pack_assets.cpp
